--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   carousel_slider: ^4.2.1
   overlapped_carousel: ^1.0.1
   curved_navigation_bar: ^1.0.3
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
